# otto

./: .gitignore  README.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  Dockerfile  README.md  docker-compose.yml  init-db.sh  pyproject.toml  requirements.txt
apps/api/ai/: admin.py  blueprints.py  extraction.py  generators.py  models.py  packages.py  persistence.py  providers.py  research.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py  workflow.py
apps/api/ai/migrations/: 0001_initial.py  0002_sourcedocument_sourcechunk_and_more.py  0003_alter_generationjob_status_and_more.py  0004_artifactreview_one_review_per_artifact_version.py  0005_alter_generatedartifact_type.py  0006_researchquestion_researchsource_researchfinding_and_more.py  0007_generationjob_max_ai_cost_usd_and_more.py  0008_alter_generationjob_max_ai_cost_usd.py
apps/api/config/: celery.py  schema.py  settings.py  urls.py
apps/api/courses/: admin.py  models.py  schema.py  serializers.py  tests.py  urls.py  views.py
apps/api/courses/migrations/: 0001_initial.py  0002_enrollment_student.py  0003_module_lesson_module_and_more.py  0004_lesson_position_module_position.py  (+3 more)
apps/api/dashboard/: admin.py  models.py  schema.py  serializers.py  tests.py  urls.py  views.py
apps/api/flashcards/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/api/quizzes/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/api/users/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
(+174 files in other folders)
