[project]
name = "otto-lms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5,<6",
    "django==6.0.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework==3.14.0",
    "gunicorn>=23.0.0",
    "langgraph>=1.1,<2",
    "langgraph-checkpoint-postgres>=3,<4",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.2,<4",
    "pypdf>=6.0,<7",
    "python-docx>=1.2,<2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "strawberry-graphql>=0.320.4",
    "strawberry-graphql-django>=0.86.4",
]
